# lyrics-translator

./: .darglint  .flake8  .gitignore  .pre-commit-config.yaml  404.html  README.md  de__surfin'_u.s.a.__the_beach_boys.txt  example.py  index.html  main.py  mkdocs.yml  mypi.ini  prepare_game.py  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml
.github/workflows/: ci.yaml  ci_yaml  release.yml  tests.yaml
docs/: index.md
docs/tutorial/: index.md
help/: index.html
lyrics/: Midsummer 2022_prepared.docx  de__surfin'_u.s.a.__the_beach_boys.docx  de__surfin'_u.s.a.__the_beach_boys.txt  sv__surfin'_u.s.a.__the_beach_boys.docx  sv__surfin'_u.s.a.__the_beach_boys.txt
lyrics_translator/: __init__.py  console.py  lyrics_translator.py  model_config.json  saver.py  song_instance.py  song_translator.py  spotify_api.py  translation.py  translator.py  utils.py
lyrics_translator/core/: lyrics.py  lyrics_translator.py  saver.py  translator.py
resources/: songs.txt
search/: search_index.json
tests/: test_console.py  test_lyrics_translator.py  test_translator.py
tutorial/: index.html
