[tool.poetry]
name = "lyrics-translator"
version = "0.4.0"
description = "🎵 LyricsTranslator - automated lyrics translation"
authors = ["Mauro Luzzatto <mauroluzzatto@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://mauroluzzatto.github.io/lyrics-translator"
repository = "https://github.com/MauroLuzzatto/lyrics-translator"
keywords = ["lyrics", "translation"]

[tool.poetry.dependencies]
python = "^3.8"
lyricsgenius = "^3.0.1"
python-docx = "^0.8.11"
python-dotenv = "^0.20.0"
transformers = {extras = ["torch"], version = "^4.20.1"}
sentencepiece = "^0.1.96"
sacremoses = "^0.0.53"
click = "^8.1.3"
tqdm = "^4.64.1"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^22.7.1"
flake8-import-order = "^0.18.1"
mypy = "^0.961"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.8"
mdx-include = "^1.4.2"
pre-commit = "^2.20.0"
importlib-metadata = {version = "^5.0.0", python = "<3.8"}
pytest = "^7.2.1"
coverage = {extras = ["toml"], version = "^7.0.5"}
pytest-cov = "^4.0.0"
ruff = "^0.0.224"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lyrics-translator = "lyrics_translator.console:main"

[tool.coverage.paths]
source = ["lyrics-translator", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["lyrics_translator"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Never try to fix `F401` (unused imports).
unfixable = ["F401"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]


[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10